DTSCCI-1059 use court location based on civil court type