@@ -13,6 +13,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static org.apache.logging.log4j.util.Strings.concat;
 
@@ -25,11 +26,6 @@ public class LocationReferenceDataService {
     public static final String COUNTY_COURT_MONEY_CLAIMS_CENTRE = "County Court Money Claims Centre";
     private final LocationReferenceDataApiClient locationReferenceDataApiClient;
     private final AuthTokenGenerator authTokenGenerator;
-    private static final String COURT_TYPE_ID = "10";
-    private static final String IS_HEARING_LOCATION = "Y";
-    private static final String IS_CASE_MAANGEMENT_LOCATION = "Y";
-    private static final String LOCATION_TYPE = "Court";
-    private static final String COURT_STATUS = "Open";
 
     public LocationRefData getCnbcLocation(String authToken) {
         try {
@@ -49,7 +45,7 @@ public class LocationReferenceDataService {
                 return cnbcLocations.get(0);
             }
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCnbcLocation - {} ", e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return LocationRefData.builder().build();
     }
@@ -72,7 +68,7 @@ public class LocationReferenceDataService {
                 return ccmccLocations.get(0);
             }
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCcmccLocation - {}", e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return LocationRefData.builder().build();
     }
@@ -83,15 +79,14 @@ public class LocationReferenceDataService {
                 locationReferenceDataApiClient.getCourtVenue(
                     authTokenGenerator.generate(),
                     authToken,
-                    IS_HEARING_LOCATION,
-                    IS_CASE_MAANGEMENT_LOCATION,
-                    COURT_TYPE_ID,
-                    LOCATION_TYPE
+                    "Y",
+                    "Y",
+                    "10",
+                    "Court"
                 );
 
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCourtLocationsForDefaultJudgments- {}",
-                      e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return new ArrayList<>();
     }
@@ -102,30 +97,44 @@ public class LocationReferenceDataService {
                 locationReferenceDataApiClient.getCourtVenue(
                     authTokenGenerator.generate(),
                     authToken,
-                    IS_HEARING_LOCATION,
-                    IS_CASE_MAANGEMENT_LOCATION,
-                    COURT_TYPE_ID,
-                    LOCATION_TYPE
+                    "Y",
+                    "Y",
+                    "10",
+                    "Court"
 
                 );
             return onlyEnglandAndWalesLocations(responseEntity)
-                .stream().sorted(Comparator.comparing(LocationRefData::getSiteName)).toList();
+                .stream().sorted(Comparator.comparing(LocationRefData::getSiteName)).collect(Collectors.toList());
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCourtLocationsForGeneralApplication {}",
-                      e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
+        }
+        return new ArrayList<>();
+    }
+
+    public List<LocationRefData> getCourtLocationsByEpimmsId(String authToken, String epimmsId) {
+        try {
+            List<LocationRefData> responseEntity =
+                locationReferenceDataApiClient.getCourtVenueByEpimmsId(
+                    authTokenGenerator.generate(),
+                    authToken, epimmsId
+                );
+            return responseEntity;
+        } catch (Exception e) {
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return new ArrayList<>();
     }
 
     public List<LocationRefData> getCourtLocationsByEpimmsIdAndCourtType(String authToken, String epimmsId) {
         try {
-            return locationReferenceDataApiClient.getCourtVenueByEpimmsIdAndType(
+            List<LocationRefData> responseEntity =
+                locationReferenceDataApiClient.getCourtVenueByEpimmsIdAndType(
                     authTokenGenerator.generate(),
-                    authToken, epimmsId, COURT_TYPE_ID
+                    authToken, epimmsId, "10"
                 );
+            return responseEntity;
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCourtLocationsByEpimmsIdAndCourtType {}",
-                      e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return new ArrayList<>();
     }
@@ -139,12 +148,14 @@ public class LocationReferenceDataService {
      */
     public List<LocationRefData> getHearingCourtLocations(String authToken) {
         try {
-            return locationReferenceDataApiClient.getHearingVenue(
+            List<LocationRefData> responseEntity =
+                locationReferenceDataApiClient.getHearingVenue(
                     authTokenGenerator.generate(),
-                    authToken, IS_HEARING_LOCATION, COURT_TYPE_ID, LOCATION_TYPE
+                    authToken, "Y", "10", "Court"
                 );
+            return responseEntity;
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getHearingCourtLocations {} ", e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
         }
         return new ArrayList<>();
     }
@@ -153,7 +164,7 @@ public class LocationReferenceDataService {
         return locationRefData == null
             ? new ArrayList<>()
             : locationRefData.stream().filter(location -> !"Scotland".equals(location.getRegion()))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public Optional<LocationRefData> getLocationMatchingLabel(String label, String bearerToken) {
@@ -185,16 +196,17 @@ public class LocationReferenceDataService {
             List<LocationRefData> responseEntity =
                 locationReferenceDataApiClient.getCourtVenueByLocationCode(
                     authTokenGenerator.generate(),
-                    authToken, IS_CASE_MAANGEMENT_LOCATION, COURT_TYPE_ID, threeDigitCode, COURT_STATUS
+                    authToken, "Y", "10", threeDigitCode, "Open"
                 );
-            if (responseEntity == null || responseEntity.isEmpty()) {
+            List<LocationRefData> locations = responseEntity;
+            if (locations == null || locations.isEmpty()) {
                 return LocationRefData.builder().build();
             } else {
-                return filterCourtLocation(responseEntity, threeDigitCode);
+                return filterCourtLocation(locations, threeDigitCode);
 
             }
         } catch (Exception e) {
-            log.error("Location Reference Data Lookup Failed for method getCourtLocation {}", e.getMessage(), e);
+            log.error("Location Reference Data Lookup Failed - " + e.getMessage(), e);
             throw e;
         }
 
@@ -203,7 +215,7 @@ public class LocationReferenceDataService {
     private LocationRefData filterCourtLocation(List<LocationRefData> locations, String courtCode) {
         List<LocationRefData> filteredLocations = locations.stream().filter(location -> location.getCourtLocationCode()
                 .equals(courtCode))
-            .toList();
+            .collect(Collectors.toList());
         if (filteredLocations.isEmpty()) {
             log.warn("No court Location Found for three digit court code : {}", courtCode);
             throw new LocationRefDataException("No court Location Found for three digit court code : " + courtCode);
@@ -211,6 +223,8 @@ public class LocationReferenceDataService {
             log.warn("More than one court location found : {}", courtCode);
             throw new LocationRefDataException("More than one court location found : " + courtCode);
         }
+
         return filteredLocations.get(0);
+
     }
 }
